--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   .cover-inner { max-width: 920px; text-align: center; }
   .cover h1 { font-size: 2.4rem; margin-bottom: .4rem; }
   .cover p { color: var(--muted); margin: 0 auto; max-width: 800px; }
+  .cover img { margin-top: 18px; max-width: 520px; height: auto; border: 1px solid var(--border); border-radius: 14px; }
   .scroll-cue { margin-top: 22px; font-size: .9rem; color: var(--muted); }
 
   /* Panels */
@@ -72,8 +73,8 @@
   .card { perspective: 1000px; }
   .card-inner { position: relative; width: 100%; min-height: 140px; transform-style: preserve-3d; transition: transform .6s; cursor: pointer; }
   .card:hover .card-inner { transform: rotateY(180deg); }
-  .card-face { position: absolute; inset: 0; display: flex; align-items: center; justify-content: center; text-align: center; padding: 16px; border: 1px solid var(--border); border-radius: 14px; box-shadow: inset 0 0 0 1px rgba(0,0,0,0.01); }
-  .front { background: #ffffff; }
+  .card-face { position: absolute; inset: 0; display: flex; align-items: center; justify-content: center; text-align: center; padding: 16px; border: 1px solid var(--border); border-radius: 14px; box-shadow: inset 0 0 0 1px rgba(0,0,0,0.01); backface-visibility: hidden; -webkit-backface-visibility: hidden; }
+  .front { background: #ffffff; transform: rotateY(0deg); }
   .back { background: #f9fafb; transform: rotateY(180deg); }
 
   /* Lists */
@@ -96,6 +97,8 @@
       <div class="cover-inner">
         <h1>Teaching Writing in the AI Era</h1>
         <p>Reframe writing as cognitive demonstration—make thinking visible with process, reflection, and authentic contexts.</p>
+        <!-- Title image space: replace src with your preferred image file name or URL -->
+        <img src="ChatGPT%20Image%20Oct%2029,%202025,%2001_30_02%20PM.png" alt="Cover image for Teaching Writing in the AI Era" />
         <div class="scroll-cue">Scroll to begin ↓</div>
       </div>
     </header>
@@ -105,12 +108,11 @@
       <h2>Introduction</h2>
       <p class="lead">After the launch of ChatGPT in 2022, students almost immediately realized that they could use it to write their essays. The early academic reflex was something like, “How do we stop people from using this?”—a reaction rooted in the same instinct that guards against plagiarism or shortcuts to learning. But it soon became clear that this was not a passing trend or a single tool to ban; it was a fundamental change in how writing itself could be produced.</p>
       <div class="media">
-        <img src="ChatGPT%20Image%20Oct%2029,%202025,%2001_30_02%20PM.png" alt="Robot writing with a pencil and paper." />
+        <img alt="Students and faculty collaborating while reviewing AI‑assisted drafts" src="data:image/svg+xml;utf8,<?xml version='1.0' encoding='UTF-8'?><svg xmlns='http://www.w3.org/2000/svg' width='440' height='300'><rect width='100%' height='100%' fill='%23ffffff'/><rect x='12' y='12' width='416' height='276' rx='12' ry='12' fill='%23f3f4f6' stroke='%23e5e7eb'/><path d='M40 100 h360' stroke='%23e5e7eb'/><path d='M40 150 h360' stroke='%23e5e7eb'/><path d='M40 200 h260' stroke='%23e5e7eb'/><circle cx='90' cy='60' r='30' fill='%23dbeafe'/><rect x='140' y='40' width='240' height='40' fill='%23eef2ff'/></svg>" />
         <div>
           <p>Faculty began to realize that the question was not how to prevent AI use, but how to teach writing in a world where AI is a legitimate collaborator. What followed was a shift in mindset: from control to adaptation, from suspicion to design. The challenge now is to ensure that writing assignments still cultivate the intellectual habits we value: critical thinking, synthesis, reflection, and authentic authorship, even when a machine can generate the words.</p>
         </div>
       </div>
-    </section>
     </section>
 
     <!-- FRAMING THE CHALLENGE -->
