--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Teaching Writing in the AI Era — Rise‑Style Interaction</title>
+<title>Teaching Writing When AI Can Write Too</title>
 <style>
   :root {
     --bg: #f3f4f6;          /* gray-100 */
@@ -227,7 +227,7 @@
 
     <!-- DESIGNING ASSIGNMENTS -->
     <section>
-      <h2>Designing Assignments that Develop Writers (15:00–25:00)</h2>
+      <h2>Designing Assignments that Develop Writers</h2>
       <p class="muted">Purpose: Demonstrate how to design writing activities that develop writing skills—critical thinking, synthesis, and reflection—rather than simply produce written products.</p>
 
       <details>
