--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <div class="wrapper">
     <header class="cover">
       <div class="cover-inner">
-        <h1>Teaching Writing in the AI Era</h1>
+        <h1>Teaching Writing When AI Can Write Too</h1>
         <p>Reframe writing as cognitive demonstration: make thinking visible with process, reflection, and authentic contexts.</p>
         <!-- Title image space: replace src with your preferred image file name or URL -->
         <img src="ChatGPT%20Image%20Oct%2029,%202025,%2001_30_02%20PM.png" alt="Cover image for Teaching Writing in the AI Era" />
